fixed width overflow problem

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,9 @@
 html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
 
   background-color: $light-shade;
 
